--- a/torrdlna/config.json
+++ b/torrdlna/config.json
@@ -11,6 +11,6 @@
   },
   "schema": {
   },
-  "devices": ["/dev/disk/by-id/usb-WD_My_Passport_0820_57585331453834334C53465A-0:0"],
+  "devices": ["/dev/sda1:/dev/sda1:rwm"],
   "privileged": ["SYS_ADMIN"]
 }
